# Super-Hexagon-Bot

./: README.md  start.sh
Bot/: CMakeLists.txt
Bot/src/: Edge.cpp  Edge.hpp  Option.cpp  Option.hpp  SHBot.cpp  SHBot.hpp  main.cpp
Mover/: Makefile  a.out  main.c
Screencast/: CMakeLists.txt  main.cpp  x11.cpp  x11.h
Screencast/X11List/: a.out  main.c
